php-src/tests/classes/interface_constant_inheritance_007.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Access type for interface constant A::FOO must be public in /root/php-src/tests/classes/interface_constant_inheritance_007.php on line 3